[cudf-io-parquet] Add static lib and fix metadata buffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,8 @@ target_link_libraries(testing-libgdf
     cuda
     ${CUDA_CUDA_LIBRARY}
     ${CUDA_NVRTC_LIBRARY}
-    ${CUDA_NVTX_LIBRARY})
+    ${CUDA_NVTX_LIBRARY}
+    ${PARQUET_STATIC_LIB})
 
 # Tests
 if(BUILD_TESTING)
