--- a/tests/utils/CMakeLists.txt
+++ b/tests/utils/CMakeLists.txt
@@ -1,8 +1,9 @@
-set(test_SRCS
+set(uu_test_SRCS
+    ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
     ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
     ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
-    ${cudf_adapter_source_files}
+
     utils-test.cpp
 )
 
-configure_test(utils-test ${test_SRCS})
+configure_test(utils-test ${uu_test_SRCS})
