--- a/tests/evaluate_query/CMakeLists.txt
+++ b/tests/evaluate_query/CMakeLists.txt
@@ -11,9 +11,6 @@ set(source_files
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/core/launcher.cpp
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/operator.cpp
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/type.cpp
-)
-
-add_library(evaluate_query_interface
   ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
   ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
   ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
@@ -23,23 +20,8 @@ add_library(evaluate_query_interface
   ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
   ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
   ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
+  ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
   ${source_files}
-)
+evaluate_query.cu)
 
-target_include_directories(evaluate_query_interface PUBLIC .)
-target_link_libraries(evaluate_query_interface
-  ${LIBGDF_STATIC_LIB}
-  ${CUDA_CUDA_LIBRARY}
-  ${CUDA_NVRTC_LIBRARY}
-  ${CUDA_NVTX_LIBRARY}
-)
-
-configure_test(evaluate_query-test
-  evaluate_query.cu
-)
-target_link_libraries(evaluate_query-test evaluate_query_interface)
-
-target_link_libraries(evaluate_query-test
-                      ${cuDF_adapter_testing_library}
-                      ${cuDF_adapter_testing_dependencies}
-)
+configure_test(evaluate_query-test "${source_files}")
