Fix libs and includes THRIFT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,7 @@ target_link_libraries(testing-libgdf
     NVStrings
     ${LIBGDF_STATIC_LIB}
     ${BLAZINGDB_IO_STATIC_LIB}
+    ${THRIFT_STATIC_LIB}
     ${ARROW_STATIC_LIB}
     ${PARQUET_STATIC_LIB}
     Boost::filesystem
