--- a/src/parquet/CMakeLists.txt
+++ b/src/parquet/CMakeLists.txt
@@ -3,4 +3,5 @@ set(PARQUET_DIR ${CMAKE_SOURCE_DIR}/src/parquet)
 set(source_files
     ${PARQUET_DIR}/file_reader.cpp
     ${PARQUET_DIR}/file_reader_contents.cpp
+    ${PARQUET_DIR}/row_group_reader_contents.cpp
 )
