--- a/src/parquet/CMakeLists.txt
+++ b/src/parquet/CMakeLists.txt
@@ -4,4 +4,5 @@ set(source_files
     ${PARQUET_DIR}/file_reader.cpp
     ${PARQUET_DIR}/file_reader_contents.cpp
     ${PARQUET_DIR}/row_group_reader_contents.cpp
+    ${PARQUET_DIR}/column_reader.cu
 )
