--- a/src/parquet/CMakeLists.txt
+++ b/src/parquet/CMakeLists.txt
@@ -6,4 +6,5 @@ set(source_files
     ${PARQUET_DIR}/row_group_reader_contents.cpp
     ${PARQUET_DIR}/column_reader.cu
     ${PARQUET_DIR}/decoder/cu_level_decoder.cu
+    ${PARQUET_DIR}/page_reader.cpp
 )
