Fix build and port the parquet test to the current API

--- a/tests/parquet/file_reader/CMakeLists.txt
+++ b/tests/parquet/file_reader/CMakeLists.txt
@@ -16,7 +16,23 @@
 # limitations under the License.
 #=============================================================================
 
-set(file_reader_SRCS single_column_file-test.cpp)
+set(PARQUET_DIR ${CMAKE_SOURCE_DIR}/src/parquet)
+
+
+set(file_reader_SRCS
+
+    ${PARQUET_DIR}/file_reader.cpp
+    ${PARQUET_DIR}/file_reader_contents.cpp
+    ${PARQUET_DIR}/row_group_reader_contents.cpp
+    ${PARQUET_DIR}/column_reader.cu
+    ${PARQUET_DIR}/decoder/cu_level_decoder.cu
+    ${PARQUET_DIR}/page_reader.cpp
+    ${PARQUET_DIR}/decoder/arrow/cu_decoder.cu
+    ${PARQUET_DIR}/decoder/arrow/util/pinned_allocator.cu
+    ${PARQUET_DIR}/api.cpp
+    
+    single_column_file-test.cpp
+)
 
 configure_test(file_reader-test "${file_reader_SRCS}")
 
