--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,5 +57,6 @@ add_subdirectory(gdf-ref-counter)
 add_subdirectory(where)
 add_subdirectory(joins)
 add_subdirectory(tpch)
+add_subdirectory(unary)
 
 message(STATUS "******** Tests are ready ********")
