--- a/tests/io-test/CMakeLists.txt
+++ b/tests/io-test/CMakeLists.txt
@@ -14,14 +14,26 @@ set(source_files
 )
 
 set(parse_csv-test_SRCS
-${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
+  ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
 
   ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
   ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
   ${CMAKE_SOURCE_DIR}/src/io/data_parser/CSVParser.cpp
   ${CMAKE_SOURCE_DIR}/src/io/data_provider/UriDataProvider.cpp
   ${source_files}
-  parse_csv.cu)
+  parse_csv.cu
+)
+  
+set(parse_parquet-test_SRCS
+    ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
+    ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
+    ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
+    ${CMAKE_SOURCE_DIR}/src/io/data_parser/ParquetParser.cpp
+    ${CMAKE_SOURCE_DIR}/src/io/data_provider/UriDataProvider.cpp
+    ${parquet_reader_source_files}
+    ${source_files}
+    parse_parquet.cu
+)
 
 configure_test(parse_csv-test "${parse_csv-test_SRCS}")
-
+configure_test(parse_parquet-test "${parse_parquet-test_SRCS}")
