--- a/tests/order-by/CMakeLists.txt
+++ b/tests/order-by/CMakeLists.txt
@@ -21,6 +21,7 @@ set(source_files
   ${CMAKE_SOURCE_DIR}/src/CodeTimer.cpp
   ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
   ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
+  ${CMAKE_SOURCE_DIR}/src/Utils.cu
     order_by.cu
 )
 configure_test(order_by-test "${source_files}")
