[otherBinaryOps] use gdf_replace_nulls

--- a/tests/joins/CMakeLists.txt
+++ b/tests/joins/CMakeLists.txt
@@ -11,7 +11,10 @@ set(source_files
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/core/launcher.cpp
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/operator.cpp
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/type.cpp
+    #todo remove when the PR https://github.com/rapidsai/cudf/pull/643 is accepted 
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/replace/replace.cu
 )
+
 
 set(full-test_SRCS
   ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
