--- a/tests/unary/CMakeLists.txt
+++ b/tests/unary/CMakeLists.txt
@@ -11,6 +11,8 @@ set(source_files
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/core/launcher.cpp
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/operator.cpp
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/type.cpp
+    #todo remove when the PR https://github.com/rapidsai/cudf/pull/643 is accepted 
+    ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/replace/replace.cu
 )
 
 set(unary-test_SRCS
