fixed names of files to compile with nvcc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ set(SRC_FILES ${CMAKE_SOURCE_DIR}/src/io/data_provider/UriDataProvider.cpp
               ${CMAKE_SOURCE_DIR}/src/io/data_parser/CSVParser.cpp
               ${CMAKE_CURRENT_SOURCE_DIR}/src/Config/Config.cpp             
               ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
-              ${CMAKE_SOURCE_DIR}/src/Interpreter/interpreter_cpp.cpp
+              ${CMAKE_SOURCE_DIR}/src/Interpreter/interpreter_cpp.cu
               ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
               ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
               ${CMAKE_SOURCE_DIR}/src/ResultSetRepository.cpp
