--- a/tests/logical-filter/CMakeLists.txt
+++ b/tests/logical-filter/CMakeLists.txt
@@ -19,6 +19,7 @@ set(source_files
 set(logical_filter_test_SRCS
     ${CMAKE_SOURCE_DIR}/src/Utils.cu
     ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
+    ${CMAKE_SOURCE_DIR}/src/FreeMemory.cpp
     ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
     ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
     ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
