--- a/tests/io-test/CMakeLists.txt
+++ b/tests/io-test/CMakeLists.txt
@@ -19,7 +19,7 @@ set(source_files
 set(parse_csv-test_SRCS
   ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
   ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
-
+  ${CMAKE_SOURCE_DIR}/src/FreeMemory.cpp
   ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
   ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
   ${CMAKE_SOURCE_DIR}/src/io/data_parser/CSVParser.cpp
@@ -31,6 +31,7 @@ set(parse_csv-test_SRCS
 set(parse_parquet-test_SRCS
     ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
     ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
+    ${CMAKE_SOURCE_DIR}/src/FreeMemory.cpp
     ${CMAKE_SOURCE_DIR}/src/cuDF/Allocator.cpp
     ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
     ${CMAKE_SOURCE_DIR}/src/io/data_parser/ParquetParser.cpp
