added more freememory jeeze...

--- a/tests/tpch/CMakeLists.txt
+++ b/tests/tpch/CMakeLists.txt
@@ -46,6 +46,7 @@ set(tpch_csv_tests_src
     ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
     ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
     ${CMAKE_SOURCE_DIR}/src/GDFCounter.cu
+    ${CMAKE_SOURCE_DIR}/src/FreeMemory.cpp
     ${CMAKE_SOURCE_DIR}/src/GDFColumn.cu
     ${CMAKE_SOURCE_DIR}/src/JoinProcessor.cpp
     ${CMAKE_SOURCE_DIR}/src/LogicalFilter.cpp
