--- a/tests/joins/CMakeLists.txt
+++ b/tests/joins/CMakeLists.txt
@@ -17,6 +17,7 @@ set(source_files
 
 
 set(full-test_SRCS
+    ${CMAKE_SOURCE_DIR}/src/Interpreter/interpreter_cpp.cu
   ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
   ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
   ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
