--- a/tests/pjoins/CMakeLists.txt
+++ b/tests/pjoins/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(jsource_files_SRC
+    ${CMAKE_SOURCE_DIR}/src/Interpreter/interpreter_cpp.cu
   ${CMAKE_SOURCE_DIR}/src/CalciteInterpreter.cpp
   ${CMAKE_SOURCE_DIR}/src/CalciteExpressionParsing.cpp
   ${CMAKE_SOURCE_DIR}/src/ColumnManipulation.cu
