--- a/tests/where/CMakeLists.txt
+++ b/tests/where/CMakeLists.txt
@@ -13,6 +13,7 @@ set(source_files
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/jit/util/type.cpp
     #todo remove when the PR https://github.com/rapidsai/cudf/pull/643 is accepted 
     ${CMAKE_SOURCE_DIR}/src/gdf_wrapper/binary-operation/replace/replace.cu
+        ${CMAKE_SOURCE_DIR}/src/Config/Config.cpp
 )
 
 set(where-test_SRCS
