[unit-tests] Adding null test

--- a/tests/parquet/file_reader/CMakeLists.txt
+++ b/tests/parquet/file_reader/CMakeLists.txt
@@ -19,7 +19,8 @@
 set(file_reader_SRCS
     ${parquet_reader_source_files}
     utils.cu
-    api-test.cu)
+    api-test.cu
+    null-test.cu)
 
 configure_test(file_reader-test "${file_reader_SRCS}")
 
