[fix/parquet-reader] move parquet code to src/cuio/parquet and minor fixes

--- a/src/cuio/parquet/CMakeLists.txt
+++ b/src/cuio/parquet/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(PARQUET_DIR ${CMAKE_SOURCE_DIR}/src/parquet)
+set(PARQUET_DIR ${CMAKE_SOURCE_DIR}/src/cuio/parquet)
 
 set(source_files
     ${PARQUET_DIR}/file_reader.cpp
